12/5/23 Fix whitespace formatting in html and add styles to 'project' class

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@
   height: 2.5em;
   width: 2.5em;
   margin-right: 1em;
+  margin-left: 1em;
 }
 
 #communities-header-text {
@@ -56,7 +57,8 @@
 .svg-img {
   height: 2em;
   width: 2em;
-  margin-right: 1em;  
+  margin-right: 1em;
+  margin-left: 1em;  
 }
 
 h2 {
@@ -159,6 +161,8 @@ button:hover {
 
 .project {
   background-color: white;
+  border-left: 8px solid rgb(224, 102, 224);
+  border-radius: 10px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
@@ -168,6 +172,8 @@ button:hover {
 .project-margin {
   margin-left: 1em;
   background-color: white;
+  border-left: 8px solid rgb(224, 102, 224);
+  border-radius: 10px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
